--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "dependencies": {
-    "connect": "^3.7.0",
-    "express": "^4.18.2",
-    "mongoose": "^7.5.2"
-  },
+  "name": "comp229005",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node server.js"
+    "start": "node ./server.js"
   },
-  "name": "comp229.005.f23",
-  "description": "COMP229 CLASS EXAMPLE",
-  "version": "1.0.0",
-  "main": "server.js",
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
+  }
 }
